# CerloCLI

./: .gitignore  README.md  cli.py  main.py  pyproject.toml
cli/: __init__.py  _spinner.py  banner.py  cli.py  colors.py
